# analogue-clock-applet

./: .gitignore  README.md  meson.build  meson_options.txt
budgie-analogue-clock-applet/: meson.build
budgie-analogue-clock-applet/schema/: com.github.samlane-ma.analogue-clock.gschema.xml
budgie-analogue-clock-applet/src/: analogue-clock-applet.vala  clock-popover.vala  clockimage.vala  meson.build  timezonedata.vala
budgie-analogue-clock-widget/: meson.build
budgie-analogue-clock-widget/src/: meson.build
icons/: meson.build
schema/: com.github.samlane-ma.analogue-clock.gschema.xml
src/: AnalogueClock.plugin  analogue-clock-applet.vala  clock-image.vala  clock-popover.vala  clockimage.vala  create-svg.vala  meson.build  panel-clock.vala  timezonedata.vala
