WIDGET_ID = 'com.github.samlane-ma.budgie-analog-clock-widget'
WIDGET_INSTALL_DIR = join_paths(prefix, libdir, 'budgie-desktop', 'raven-plugins', WIDGET_ID)

install_data('schema/com.github.samlane-ma.budgie-analog-clock-widget.gschema.xml',
    install_dir: SCHEMA_DIR,
)

subdir('src')
subdir('icons')
